--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.0.1-for-DynamX-3.2"
+version = "1.0.0-for-DynamX-3.2"
 group = "fr.dynamx.addons.basics" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "BasicsAddon"
 
@@ -36,7 +36,7 @@ minecraft {
 
 repositories {
     maven {
-        url 'http://maven.dynamx.fr/artifactory/DynamXRepo'
+        url 'https://maven.dynamx.fr/artifactory/DynamXRepo'
     }
     maven {
         url 'https://maven.dynamx.fr/artifactory/' + 'ACsGuisRepo'
@@ -44,7 +44,7 @@ repositories {
 }
 
 dependencies {
-    deobfCompile "fr.dynamx:DynamX:3.2.2-4"
+    deobfCompile "fr.dynamx:DynamX:3.2.2-e"
     compile "fr.aym.acsguis:ACsGuis:1.2.0-4"
 }
 
