--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.0.8-for-DynamX-4.0.0-b21"
+version = "1.0.8-for-DynamX-4.0.0-b28"
 group = "fr.dynamx.addons.basics" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "BasicsAddon"
 
@@ -46,7 +46,7 @@ repositories {
 }
 
 dependencies {
-    compile "fr.dynamx:DynamX:4.0.0-beta-21"
+    compile "fr.dynamx:DynamX:4.0.0-beta-28-dev4"
     compile "fr.aym.acsguis:ACsGuis:1.2.5"
 }
 
