--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 buildscript {
     repositories {
-        jcenter()
         maven { url = "https://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
@@ -24,48 +23,24 @@ compileJava {
 //sourceSets { main { output.resourcesDir = output.classesDir } }
 
 minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_39"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings channel: 'stable', version: '39-1.12'
 }
 
 repositories {
     maven {
-        url 'http://maven.dynamx.fr/artifactory/DynamXRepo'
+        url = 'https://maven.dynamx.fr/artifactory/DynamXRepo'
     }
     maven {
-        url 'https://maven.dynamx.fr/artifactory/' + 'ACsGuisRepo'
+        url = 'https://maven.dynamx.fr/artifactory/' + 'ACsGuisRepo'
     }
 }
 
 dependencies {
-    //compile "fr.dynamx:DynamX:4.0.0-beta-28-dev4"
-    compile "fr.aym.acsguis:ACsGuis:1.2.5"
+    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
+    compileOnly fileTree(dir: 'libs', include: '*.jar')
+    compileOnly "fr.aym.acsguis:ACsGuis:1.2.5"
 }
 
-
-processResources {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
+jar {
+    duplicatesStrategy 'exclude'
 }
